<resources>









    <string name="app_name">Company Cam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Sign up your company</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="support">Support</string>
    <string name="log_out">Log out</string>
    <string name="login_dialog">Logging in…</string>
    <string name="login_failure_title">Uh Oh!</string>
    <string name="login_failure_message">It looks like your username or password is incorrect. Try again.</string>
    <string name="place_unnamed">Unnamed</string>
    <string name="places_empty">No Places found.</string>
    <string name="no_groups">You have no groups with this company.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_camera_place">Take Photos At:</string>
    <string name="saving_photo">Saving photo…</string>
    <string name="uploading_photo">Uploading photo…</string>
    <string name="create_place">Create Place</string>
    <string name="could_not_get_location">Sorry, we couldn\'t get your location.</string>
    <string name="create_place_manually">Manually Create New Place</string>
    <string name="save_place">Save Place</string>
    <string name="hint_place_name">Place Name (Optional)</string>
    <string name="hint_address1">Address Line 1</string>
    <string name="hint_address2">Address Line 2 (Optional)</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="hint_zip">Zip Code</string>
    <string name="hint_state">State</string>
    <string name="city">City</string>
    <string name="photos">Photos</string>
    <string name="places">Places</string>
    <string name="camera">Camera</string>
    <string name="places_search_hint">Type a location name or address</string>
    <string name="image_editor_load_failure_title">Image load failed</string>
    <string name="image_editor_load_failure_message">Sorry, something went wrong loading that image you took. Please try again.</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="title_activity_photo_detail">PhotoDetailActivity</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_share">Share</string>
    <string name="menu_set_place">Change Location</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_use_my_location">Use my Location</string>
    <string name="menu_more_options">More Options</string>
    <string name="photo_load_error">Sorry, an error occurred while loading your photo.</string>
    <string name="view_photo">View Photo</string>
    <string name="yes">Yes</string>
    <string name="delete_photo_prompt">Are you sure you want to delete this photo?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="map">Map</string>
    <string name="contacts">Contacts</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="title_activity_place_search">Select a location</string>
    <string name="add_comment_placeholder">Add a comment</string>
    <string name="comment_post">Post</string>
    <string name="comments">Comments</string>
    <string name="photos_selected">%d Photos Selected</string>
    <string name="photo_selected">%d Photo Selected</string>
    <string name="photo">Are you sure you want to delete %d Photo?</string>
    <string name="num_photos">Are you sure you want to delete %d Photos?</string>
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="error_no_photo_founs">No Photos Found In Your Device</string>
    <string name="deleting_photos">Deleting photos…</string>
    <string name="network_error">An error occurred. Please check your network connection.</string>
    <string name="error_place_exist">An error occurred. Current place already exists</string>
    <string name="welcome_message">Welcome to CompanyCam! \n Click the button in the bottom right corner to take your first photo</string>
    <string name="search_google">Search Google for Place or Address</string>
    <string name="search">Search</string>
    <string name="creating_new_place">Creating new Place…</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="view_place">View Place</string>
    <string name="place_info">Place Info</string>
    <string name="new_contact">New Contact</string>
    <string name="hint_contact_first_name">First Name</string>
    <string name="hint_contact_last_name">Last Name</string>
    <string name="hint_contact_position">Position</string>
    <string name="hint_contact_email">Email</string>
    <string name="hint_contact_home_phone">Home Phone</string>
    <string name="hint_contact_work_phone">Work Phone</string>
    <string name="hint_contact_mobile_phone">Mobile Phone</string>
    <string name="hint_contact_fax">Fax Number</string>
    <string name="save">Save</string>
    <string name="no_contacts">This location has no contacts.</string>
    <string name="no_locations">Click the camera to select a location and take your first photo.</string>
    <string name="close_comments">Close Comments</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="photo_tab_my_photos">My Photos</string>
    <string name="photo_tab_all_photos">All Photos</string>
    <string name="photo_tab_group">Groups</string>
    <string name="unable_process_image_for_upload">Unable to process image for upload</string>
    <string name="menu_upload_photos">Upload Photos</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="tag_object">Tag Object</string>

    <plurals name="delete_photos_prompt">
        <item quantity="zero">@string/num_photos</item>
        <item quantity="one">@string/photo</item>
        <item quantity="other">@string/num_photos</item>
    </plurals>

    <plurals name="photos_selected">
        <item quantity="zero">@string/photos_selected</item>
        <item quantity="one">@string/photo_selected</item>
        <item quantity="other">@string/photos_selected</item>
    </plurals>

    <string name="hint_company">Company</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="signup_failure_title">Uh Oh!</string>
    <string name="signup_failure_message">There was an issue creating your account.</string>

    <!-- Out of memory errors through out capture flow-->
    <string name="oome_camera">Sorry there was a memory error, if this continues please exit app and try again.</string>
    <string name="oome_editing">Sorry there was error processing your drawings,\n close out app and retake picture</string>
    <string name="loading_location_msg">Please wait...</string>
    <string name="loading_locations_title">Loading Your locations</string>

    <!-- CompanyLocationLoadService -->
    <string name="locations_loading">Loading locations...</string>
    <string name="locations_received">Locations received</string>
    <string name="locations_loaded">Locations added</string>

    <!-- CompanyGroupLoadService -->
    <string name="groups_loading">Loading groups...</string>
    <string name="groups_received">Groups received</string>
    <string name="groups_loaded">Groups added</string>

    <string name="chips_enter_email_address">Please enter a valid email address for this person</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid e-mail address.</string>
    <string name="email">E-mail</string>
    <string name="confirm">Confirm</string>
</resources>
