<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_photo_share"
          android:title="@string/menu_share"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_share"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_photo_delete"
          android:title="@string/menu_delete"
          android:orderInCategory="101"
          android:icon="@drawable/ic_action_discard"
          app:showAsAction="ifRoom" />
      <item android:id="@+id/menu_photo_location_change"
            android:title="@string/menu_more_options"
            android:icon="@drawable/ic_overflow_action"
            app:showAsAction="ifRoom"
            android:orderInCategory="102" >
          <menu>
              <item android:id="@+id/menu_set_place"
                  android:title="@string/menu_set_place" />
          </menu>

      </item>

</menu>