<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:background="@color/white"
                tools:context="com.agilx.companycam.fragments.contact.EditContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_first_name"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_first_name"
                android:inputType="textCapSentences"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_last_name"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_last_name"
                android:inputType="textCapSentences"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_position"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_position"
                android:inputType="textCapSentences"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_email"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_email"
                android:inputType="textEmailAddress"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_home_phone"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_home_phone"
                android:inputType="phone"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_work_phone"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_work_phone"
                android:inputType="phone"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_mobile_phone"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_mobile_phone"
                android:inputType="phone"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/contact_fax"
                style="@style/CompanyCamTheme.MaterialEditText.HighlightFloatingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_contact_fax"
                android:inputType="phone"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_contact"
            style="@style/CompanyCamTheme.ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>
