<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/blue_gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_new" />

    <View
        android:id="@+id/viewAnchor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        style="@style/CompanyCamTheme.MaterialEditText.White"
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:background="#ffffff"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        style="@style/CompanyCamTheme.MaterialEditText.White"
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textUsername"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@id/textUsername"
        android:layout_alignRight="@id/textUsername"
        android:layout_alignStart="@id/textUsername"
        android:layout_alignEnd="@id/textUsername"
        android:hint="@string/password"
        android:background="#ffffff"/>

    <Button
        style="@style/CompanyCamTheme.Button.WhiteBox"
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@id/textPassword"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@id/textUsername"
        android:layout_alignRight="@id/textUsername"
        android:layout_alignStart="@id/textUsername"
        android:layout_alignEnd="@id/textUsername"/>

    <Button
        android:id="@+id/createAccount"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPassword"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/forgotPassword"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

</RelativeLayout>
