<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray">

        <ImageView
            android:id="@+id/place_main_photo"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:src="@drawable/default_photo_icon"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <ImageButton
            android:id="@+id/place_map_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:contentDescription="@string/map"/>
        <ImageButton
            android:id="@+id/place_contacts_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:contentDescription="@string/contacts"/>
        <ImageButton
            android:id="@+id/place_edit_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:contentDescription="@string/menu_edit"/>
    </LinearLayout>

</LinearLayout>